Fixed issue with scrollbar showing in search options during transitions

--- a/src/App.css
+++ b/src/App.css
@@ -289,16 +289,9 @@
   overflow-y: auto;
 }
 
-.Guess-options.close {
-  max-height: 0px;
-}
 
-.Guess-options.open {
-  max-height: 247px;
-  overflow-y: auto;
-}
 
-.Guess-options::-webkit-scrollbar {
+.No-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
